--- a/home.css
+++ b/home.css
@@ -1,6 +1,112 @@
-p{
+*{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;    
+}
+body{
+    background-color: #f4f4f4;
+    margin: 0;
+    padding: 0;
+}
+.primerh3{
     text-align: center;
-    text-decoration: line-through;
+    text-decoration:dotted;
     text-transform: uppercase;
-    
+}
+.Cabecera_de_la_pagina{
+    background-color: rgba(128, 128, 128, 0.541);
+}
+.primer_parrafo{
+    text-align: start;
+    text-decoration:underline;
+    text-transform: initial;
+    font: bold;
+    font-style:normal;
+    font-size: large;
+}
+.PP1{
+    text-align: justify;
+    text-transform: capitalize;
+    text-decoration:underline;
+    color:darkslategray;
+}
+.segundo_bq{
+    margin: 20px auto;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+}
+.DavidGilmour{
+    height: 300px;
+    width: 250px;
+    object-fit: contain;
+    object-position:left;
+    margin: 0 0 1em 1em;
+}
+.CajasH{
+    padding: 20px;
+}
+.Caja1{
+    background-color: rgba(109, 187, 255, 0.178);
+    width:500px;
+    height: 30px;
+    border-style:double;
+    border-color:rgba(121, 121, 121, 0.945);
+    margin: 1px 10px 10px 10px ;
+    padding-left: 10px;
+    padding: 10px;
+    border-radius: 0.2rem;
+    box-shadow:black 5px 4px 10px 2px;
+}
+.PP2_caja1{
+    text-align: center;
+    text-transform:uppercase;
+    text-overflow: ellipsis;
+    font-size: 20px;
+}
+.Caja2{
+    background-color: rgba(255, 159, 69, 0.178);
+    width:500px;
+    height: 30px;
+    border-style:double;
+    border-color:rgba(121, 121, 121, 0.945);
+    margin: 1px 10px 10px 10px ;
+    padding-left: 10px;
+    padding: 10px;
+    border-radius: 0.2rem;
+    box-shadow:rgb(109, 109, 109) 20px 15px 8px 3px;
+}
+
+.Box1{
+    background-color: rgba(69, 119, 255, 0.521);
+    width:500px;
+    height: 30px;
+    padding: 10px;
+    border-radius: 0.2rem;
+    box-shadow:rgba(37, 37, 37, 0.781) 7px 5px 8px 3px;
+    margin: 1px 10px 10px 10px ;
+}
+
+.Father_box{
+    position: relative;
+    background-color: #ff2828;
+    padding: 20px;
+    width: 500px;
+    height: 100px;
+    border-radius: 0.2rem;
+}
+.Inner_box{
+    background-color: rgb(48, 48, 48);
+    width:500px;
+    height: 30px;
+    position: absolute;
+    left: 300px;
+   
+    padding: 20px;
+    border-radius: 0.3rem;
+}
+.PP3_FatherBox{
+    color: aliceblue;
+}   
+.PP4_InnerBox{
+    color: rgb(255, 141, 10);
 }
