--- a/home.css
+++ b/home.css
@@ -200,3 +200,36 @@ body{
       transform: translateX(0);
     }
   }
+.fondoPag{
+  background-color: rgba(128, 128, 128, 0.541);
+  padding-top: 2px;
+  padding-bottom: 2px;
+  border-radius: 4px;
+}
+.ultimaParte{
+  font-style: italic;
+  font-family: cursive;
+  font-size: 15px;
+  text-align: center;
+  text-decoration: solid;
+  text-underline-offset:initial;
+}
+
+.button1{
+  background-color: #4CAF50; 
+  border: none; 
+  color: white; 
+  padding: 10px 20px; 
+  text-align: center; 
+  text-decoration: none;
+  display: inline-block;
+  font-size: 13px; 
+  margin: 4px 2px; 
+  cursor: pointer; 
+  transition-duration: 0.4s; 
+}
+.button1:hover {
+  background-color: white; 
+  color: black; 
+  border: 2px solid #4CAF50; 
+}
